--- a/app/src/main/res/layout-w900dp/character_list.xml
+++ b/app/src/main/res/layout-w900dp/character_list.xml
@@ -9,7 +9,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="com.ignaciojgp.charactersheet.CharacterListActivity">
+    tools:context="com.ignaciojgp.charactersheet.Views.CharacterListActivity">
 
     <!--
     This layout is a two-pane layout for the Characters
@@ -26,7 +26,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.ignaciojgp.charactersheet.CharacterListActivity"
+        tools:context="com.ignaciojgp.charactersheet.Views.CharacterListActivity"
         tools:listitem="@layout/character_list_content" />
 
     <FrameLayout
