--- a/app/src/main/res/menu/activity_character_view_drawer.xml
+++ b/app/src/main/res/menu/activity_character_view_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Class" />
         <item
+            android:id="@+id/nav_skill"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Skills" />
+        <item
             android:id="@+id/nav_mods"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Mods" />
